--- a/client/src/pages/home.css
+++ b/client/src/pages/home.css
@@ -1,4 +1,69 @@
+/* Style for the homenav container */
 .homenav {
-         background-color: white;
-         overflow: hidden;
+         max-width: 85%;
+         margin: 0 auto;
+         padding: 5px;
+         font-family: Arial, sans-serif;
+       }
+       
+       /* Style for the header */
+       h1 {
+         color:rgba(0, 87, 165, 1);
+         text-align: center;
+         font-size: 28px;
+         margin-bottom: 10px;
+       }
+       
+       
+       /* Style for the paragraphs */
+       p {
+         color: black;
+         font-family: Inria sans;
+         line-height: 2;
+         margin-bottom: 35px;
+         margin-left: 300px;
+         margin-right: 300px;
+         text-align:center;
+       }
+       
+       /* Style for the buttons */
+       button {
+         padding: 10px 20px;
+         margin-bottom: 10px;
+         background-color: rgba(160, 220, 242, 1);
+         font-family: Inria sans;
+         color: rgb(0, 0, 0);
+         border: none;
+         cursor: pointer;
+       }
+       
+       /* Style for the headings */
+       h2, h3 {
+         font-style:bold;
+         font-family: Inria sans;
+         font-size: 24px;
+         margin-bottom: 10px;
+       }
+       
+       /* Style for the videos */
+       video {
+         max-width: 100%;
+         margin-bottom: 10px;
+         margin-right:50px;
+         margin-left:80px;
+       }
+       
+       /* Style for the additional resources section */
+       h3 {
+         font-size: 18px;
+         margin-bottom: 5px;
+       }
+       
+       a {
+         color: #000000;
+         text-decoration: none;
+       }
+       
+       a:hover {
+         text-decoration: underline;
        }
