--- a/client/src/pages/signIn.css
+++ b/client/src/pages/signIn.css
@@ -26,7 +26,7 @@ h1 {
     font-weight: 700;
     line-height: 15px;
     letter-spacing: .43px;
-    padding: 90px;
+    padding: 50px;
   }
   
   h2 {
@@ -41,7 +41,15 @@ h1 {
   padding: 50px;
   }
   
-
+  p{
+    color: #0057A5;
+    text-align: center;
+    font-size: 12px;
+    font-family: Inter;
+    font-weight: 700;
+    line-height: 15px;
+    letter-spacing: 1.08px;
+  }
 
 
 .sign-container{
@@ -58,7 +66,8 @@ h1 {
     background: #DCF6FF;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     align-items: center;
-    margin: auto
+    margin: auto;
+    margin-block-start: 70px;
   }
 
 
@@ -77,17 +86,29 @@ h1 {
   }
 
   button{
-width: 160px;
-height: 46px;
+width: 120px;
+height: 35px;
 flex-shrink: 0;
-background-color: #5C3021;
+background-color: #A0DCF2;
+margin: 30px;
   }
 
   #sign-up-button{
     background-color: #EBB75B;
-    width: 140px;
-    height: 40px;
+    width: 150px;
+    height: 50px;
     flex-shrink: 0;
+    margin: 20px;
+color: #000;
+font-size: 20px;
+font-family: Inter;
+font-weight: 600;
+line-height: 15px;
+letter-spacing: 1.8px;
 }
 
-  
+
+label{
+  padding-top: 20px;
+  align-items: center;
+}
